// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getMarginPaddingStyles Different values ​​depends on the responsive 1`] = `
Object {
  "general": Object {
    "margin-bottom": "11px",
    "margin-left": "11px",
    "margin-right": "11px",
    "margin-top": "11px",
  },
  "l": Object {
    "margin-bottom": "5px",
    "margin-left": "5px",
    "margin-right": "5px",
    "margin-top": "5px",
  },
  "m": Object {
    "margin-bottom": "6px",
    "margin-left": "4px",
    "margin-right": "2px",
    "margin-top": "0px",
  },
  "s": Object {
    "margin-bottom": "0px",
    "margin-left": "0px",
    "margin-right": "0px",
    "margin-top": "0px",
  },
  "xl": Object {
    "margin-bottom": "45px",
    "margin-left": "45px",
    "margin-right": "45px",
    "margin-top": "45px",
  },
  "xs": Object {
    "margin-bottom": "1px",
    "margin-left": "1px",
    "margin-right": "1px",
    "margin-top": "1px",
  },
  "xxl": Object {
    "margin-bottom": "12px",
    "margin-left": "12px",
    "margin-right": "12px",
    "margin-top": "12px",
  },
}
`;

exports[`getMarginPaddingStyles Get a correct margin and padding 1`] = `
Object {
  "general": Object {
    "margin-bottom": "3px",
    "margin-left": "4px",
    "margin-right": "2px",
    "margin-top": "1px",
  },
  "l": Object {
    "margin-bottom": "3px",
    "margin-left": "4px",
    "margin-right": "2px",
    "margin-top": "1px",
  },
  "m": Object {
    "margin-bottom": "3px",
    "margin-left": "4px",
    "margin-right": "2px",
    "margin-top": "1px",
  },
  "s": Object {
    "margin-bottom": "3px",
    "margin-left": "4px",
    "margin-right": "2px",
    "margin-top": "1px",
  },
  "xl": Object {
    "margin-bottom": "3px",
    "margin-left": "4px",
    "margin-right": "2px",
    "margin-top": "1px",
  },
  "xs": Object {
    "margin-bottom": "3px",
    "margin-left": "4px",
    "margin-right": "2px",
    "margin-top": "1px",
  },
  "xxl": Object {
    "margin-bottom": "3px",
    "margin-left": "4px",
    "margin-right": "2px",
    "margin-top": "1px",
  },
}
`;
